--- a/haberman_breast_cancer.ipynb
+++ b/haberman_breast_cancer.ipynb
@@ -610,11 +610,73 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Logistic regression is the best perforing model, so that, it is the final model used for prediciton in the following steps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('t1', MinMaxScaler(copy=True, feature_range=(0, 1))),\n",
+       "                ('t2',\n",
+       "                 PowerTransformer(copy=True, method='yeo-johnson',\n",
+       "                                  standardize=True)),\n",
+       "                ('m',\n",
+       "                 LogisticRegression(C=1.0, class_weight=None, dual=False,\n",
+       "                                    fit_intercept=True, intercept_scaling=1,\n",
+       "                                    l1_ratio=None, max_iter=100,\n",
+       "                                    multi_class='auto', n_jobs=None,\n",
+       "                                    penalty='l2', random_state=None,\n",
+       "                                    solver='lbfgs', tol=0.0001, verbose=0,\n",
+       "                                    warm_start=False))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "steps = [('t1',  MinMaxScaler()), \n",
+    "         ('t2', PowerTransformer()), \n",
+    "         ('m', LogisticRegression(solver='lbfgs'))]\n",
+    "\n",
+    "model = Pipeline(steps = steps)\n",
+    "model.fit(X,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">data=[31, 59, 2], Survival=83.597%\n",
+      ">data=[34, 65, 4], Survival=75.678%\n",
+      ">data=[31, 60, 1], Survival=87.755%\n"
+     ]
+    }
+   ],
+   "source": [
+    "data =[[31, 59,2], [34, 65, 4], [31, 60, 1]]\n",
+    "\n",
+    "for row in data:\n",
+    "    yhat = model.predict_proba([row])\n",
+    "    p_value = yhat[0,0]*100\n",
+    "    print('>data=%s, Survival=%.3f%%' %(row, p_value))"
+   ]
   },
   {
    "cell_type": "code",
