build baseline model

--- a/oil_spill_classification.ipynb
+++ b/oil_spill_classification.ipynb
@@ -103,11 +103,32 @@
    "source": [
     "# Model Test and Baseline Result\n",
     "\n",
-    "Metics: Gmean = rsqt(sensitivity * specificity \n",
+    "The metrics used in this project is G-Mean, geometric mean. G-Mean has the distinctive property of being independent of the distribution of examples between calsses, and is thus robust in circumstances where this distribution might change with time or be different in the trainng and testing data. \n",
+    "\n",
+    "G-Mean = (Sensitivity * specificity) ^^ 0.5\n",
+    "\n",
     "\n",
     "sensitivity = recall = true positive / (true positive + false negative) measure of the accuracy of positive class\n",
     "\n",
     "specificity = true negative / (true negative + false positive) measure of the accuracy of negative class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "from numpy import mean\n",
+    "from numpy import std\n",
+    "from pandas import read_csv\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+    "from imblearn.metrics import geometric_mean_score\n",
+    "from sklearn.metrics import make_scorer\n",
+    "from sklearn.dummy import DummyClassifier"
    ]
   },
   {
@@ -152,6 +173,15 @@
     "    metric = make_scorer(geometric_mean_score)\n",
     "    scores = corss_val_score(model, X, y, scoring=metric, cv=cv, n_jobs=-1)\n",
     "    return scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = DummyClassifier(strategy = 'uniform')"
    ]
   },
   {
